--- a/home.html
+++ b/home.html
@@ -59,7 +59,7 @@
                         </li>
 
                         <li class="nav-item d-flex align-items-center ps-lg-3 mt-lg-0 mt-2">
-                            <a class="nav-link custom-button primary-btn" href="plan-pricing.html">Plans & Pricing</a>
+                            <a class="nav-link custom-button primary-btn" href="pricing.html">Plans & Pricing</a>
                         </li>
                     </ul>
                 </div>
