--- a/pricing.html
+++ b/pricing.html
@@ -36,7 +36,7 @@
         </div>
         <nav class="navbar  navbar-expand-lg navbar-light bg-transparent">
             <div class="container">
-                <a class="navbar-brand fw-bold text-lg text-white" href="#">Ideal Solutions</a>
+                <a class="navbar-brand fw-bold text-lg text-white" href="index.html">Ideal Solutions</a>
                 <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                         aria-label="Toggle navigation">
