virtual office page

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                             <a class="nav-link active" aria-current="page" href="#">Coworking Space</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Virtual Office</a>
+                            <a class="nav-link" href="virtual-office.html">Virtual Office</a>
                         </li>
 
                         <li class="nav-item">
