--- a/pricing-detail.html
+++ b/pricing-detail.html
@@ -56,7 +56,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Blog</a>
+                            <a class="nav-link" href="blog.html">Blog</a>
                         </li>
 
                         <li class="nav-item d-flex align-items-center ps-lg-3 mt-lg-0 mt-2">
