--- a/blog.html
+++ b/blog.html
@@ -47,19 +47,19 @@
                             <a class="nav-link" aria-current="page" href="#">Coworking Space</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Virtual Office</a>
+                            <a class="nav-link" href="virtual-office.html">Virtual Office</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Services</a>
+                            <a class="nav-link" href="services.html">Services</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">Blog</a>
+                            <a class="nav-link" href="blog.html">Blog</a>
                         </li>
 
                         <li class="nav-item d-flex align-items-center ps-lg-3 mt-lg-0 mt-2">
-                            <a class="nav-link custom-button primary-btn" href="#">Plans & Pricing</a>
+                            <a class="nav-link custom-button primary-btn" href="pricing.html">Plans & Pricing</a>
                         </li>
                     </ul>
                 </div>
@@ -111,7 +111,7 @@
                                 Space for all your work needs</h6>
                             <p class="grey-text">Lorem ipsum dolor sit amet, adipiscing elit. Morbi accumsan ipsum velit
                                 Lorem</p>
-                            <a href="#" class="d-flex align-items-center secondary-text">Read More
+                            <a href="blog-detail.html" class="d-flex align-items-center secondary-text">Read More
                                 <i class="material-icons arrow_forward_ios text-md ms-2"></i>
                             </a>
                         </div>
@@ -131,7 +131,7 @@
                                 PR Strategies for small business</h6>
                             <p class="grey-text">Lorem ipsum dolor sit amet, adipiscing elit. Morbi accumsan ipsum velit
                                 Lorem</p>
-                            <a href="#" class="d-flex align-items-center secondary-text">Read More
+                            <a href="blog-detail.html" class="d-flex align-items-center secondary-text">Read More
                                 <i class="material-icons arrow_forward_ios text-md ms-2"></i>
                             </a>
                         </div>
@@ -151,7 +151,7 @@
                                 Stimulating work environment</h6>
                             <p class="grey-text">Lorem ipsum dolor sit amet, adipiscing elit. Morbi accumsan ipsum velit
                                 Lorem</p>
-                            <a href="#" class="d-flex align-items-center secondary-text">Read More
+                            <a href="blog-detail.html" class="d-flex align-items-center secondary-text">Read More
                                 <i class="material-icons arrow_forward_ios text-md ms-2"></i>
                             </a>
                         </div>
@@ -172,7 +172,7 @@
                                 PR Strategies for small business</h6>
                             <p class="grey-text">Lorem ipsum dolor sit amet, adipiscing elit. Morbi accumsan ipsum velit
                                 Lorem</p>
-                            <a href="#" class="d-flex align-items-center secondary-text">Read More
+                            <a href="blog-detail.html" class="d-flex align-items-center secondary-text">Read More
                                 <i class="material-icons arrow_forward_ios text-md ms-2"></i>
                             </a>
                         </div>
@@ -192,7 +192,7 @@
                                 Stimulating work environment</h6>
                             <p class="grey-text">Lorem ipsum dolor sit amet, adipiscing elit. Morbi accumsan ipsum velit
                                 Lorem</p>
-                            <a href="#" class="d-flex align-items-center secondary-text">Read More
+                            <a href="blog-detail.html" class="d-flex align-items-center secondary-text">Read More
                                 <i class="material-icons arrow_forward_ios text-md ms-2"></i>
                             </a>
                         </div>
@@ -212,7 +212,7 @@
                                 Space for all your work needs</h6>
                             <p class="grey-text">Lorem ipsum dolor sit amet, adipiscing elit. Morbi accumsan ipsum velit
                                 Lorem</p>
-                            <a href="#" class="d-flex align-items-center secondary-text">Read More
+                            <a href="blog-detail.html" class="d-flex align-items-center secondary-text">Read More
                                 <i class="material-icons arrow_forward_ios text-md ms-2"></i>
                             </a>
                         </div>
@@ -232,7 +232,7 @@
                                 Space for all your work needs</h6>
                             <p class="grey-text">Lorem ipsum dolor sit amet, adipiscing elit. Morbi accumsan ipsum velit
                                 Lorem</p>
-                            <a href="#" class="d-flex align-items-center secondary-text">Read More
+                            <a href="blog-detail.html" class="d-flex align-items-center secondary-text">Read More
                                 <i class="material-icons arrow_forward_ios text-md ms-2"></i>
                             </a>
                         </div>
@@ -252,7 +252,7 @@
                                 PR Strategies for small business</h6>
                             <p class="grey-text">Lorem ipsum dolor sit amet, adipiscing elit. Morbi accumsan ipsum velit
                                 Lorem</p>
-                            <a href="#" class="d-flex align-items-center secondary-text">Read More
+                            <a href="blog-detail.html" class="d-flex align-items-center secondary-text">Read More
                                 <i class="material-icons arrow_forward_ios text-md ms-2"></i>
                             </a>
                         </div>
@@ -272,7 +272,7 @@
                                 Stimulating work environment</h6>
                             <p class="grey-text">Lorem ipsum dolor sit amet, adipiscing elit. Morbi accumsan ipsum velit
                                 Lorem</p>
-                            <a href="#" class="d-flex align-items-center secondary-text">Read More
+                            <a href="blog-detail.html" class="d-flex align-items-center secondary-text">Read More
                                 <i class="material-icons arrow_forward_ios text-md ms-2"></i>
                             </a>
                         </div>
