--- a/pricing-detail.html
+++ b/pricing-detail.html
@@ -48,7 +48,7 @@
                             <a class="nav-link active" aria-current="page" href="#">Coworking Space</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Virtual Office</a>
+                            <a class="nav-link" href="virtual-office.html">Virtual Office</a>
                         </li>
 
                         <li class="nav-item">
@@ -60,7 +60,7 @@
                         </li>
 
                         <li class="nav-item d-flex align-items-center ps-lg-3 mt-lg-0 mt-2">
-                            <a class="nav-link custom-button primary-btn" href="#">Plans & Pricing</a>
+                            <a class="nav-link custom-button primary-btn" href="pricing.html">Plans & Pricing</a>
                         </li>
                     </ul>
                 </div>
