--- a/virtual-office.html
+++ b/virtual-office.html
@@ -46,8 +46,8 @@
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="#">Coworking Space</a>
                         </li>
-                        <li class="nav-item ">
-                            <a class="nav-link active" href="virtual-office.html">Virtual Office</a>
+                        <li class="nav-item">
+                            <a class="nav-link" href="virtual-office.html">Virtual Office</a>
                         </li>
 
                         <li class="nav-item">
@@ -59,7 +59,7 @@
                         </li>
 
                         <li class="nav-item d-flex align-items-center ps-lg-3 mt-lg-0 mt-2">
-                            <a class="nav-link custom-button primary-btn" href="#">Plans & Pricing</a>
+                            <a class="nav-link custom-button primary-btn" href="pricing.html">Plans & Pricing</a>
                         </li>
                     </ul>
                 </div>
