--- a/blog-detail.html
+++ b/blog-detail.html
@@ -47,19 +47,19 @@
                             <a class="nav-link" aria-current="page" href="#">Coworking Space</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Virtual Office</a>
+                            <a class="nav-link" href="virtual-office.html">Virtual Office</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Services</a>
+                            <a class="nav-link" href="services.html">Services</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">Blog</a>
+                            <a class="nav-link" href="blog.html">Blog</a>
                         </li>
 
                         <li class="nav-item d-flex align-items-center ps-lg-3 mt-lg-0 mt-2">
-                            <a class="nav-link custom-button primary-btn" href="#">Plans & Pricing</a>
+                            <a class="nav-link custom-button primary-btn" href="pricing.html">Plans & Pricing</a>
                         </li>
                     </ul>
                 </div>
