--- a/index.html
+++ b/index.html
@@ -21,12 +21,22 @@
                     <div class="col-md-12">
                         <div class="d-flex align-items-center justify-content-between">
                             <div class=" m-0 text-sm d-flex align-items-center me-4 text-white">
-                                <i class="material-icons phone text-sm  me-2"></i>
-                                +1092788292
+
+                                <div class="me-2 d-flex align-items-center ">
+                                    <i class="material-icons phone text-sm  me-2"></i>
+                                    +1092788292
+                                </div> |
+                                <div class="ms-2 d-flex align-items-center ">jhon@example.com
+                                    <i class="material-icons mail text-sm  ms-2"></i>
+                                </div>
                             </div>
                             <div class=" m-0 text-sm d-flex align-items-center text-white">
-                                jhon@example.com
-                                <i class="material-icons mail text-sm  ms-2"></i>
+                                <a href="login.html" class="me-2 d-flex align-items-center text-white">
+                                    Login
+                                </a> |
+                                <a href="register.html" class="ms-2 d-flex align-items-center text-white">
+                                    Sign Up
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -44,7 +54,7 @@
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Coworking Space</a>
+                            <a class="nav-link active" aria-current="page" href="coworking-space.html">Coworking Space</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="virtual-office.html">Virtual Office</a>
