--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="assets/material-icons/dist/material-design-icons.css">
     <link rel="stylesheet" type="text/css" href="assets/css/app.css">
     <!--    ========****==================****==========-->
+    <link rel="icon" type="image/jpg" href="assets/images/icon.jpg">
 </head>
 <body class="m-0 p-0">
 <div class="main-wrapper">
